<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_filter_list_black_24dp"
        android:title="@string/menu_filter"
        app:showAsAction="ifRoom|withText">
        <menu>
            <group
                android:id="@+id/filter_group"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/all"
                    android:checked="true"
                    android:title="@string/menu_filter_all" />
                <item
                    android:id="@+id/season1"
                    android:title="@string/menu_filter_season1" />
                <item
                    android:id="@+id/season2"
                    android:title="@string/menu_filter_season2" />
                <item
                    android:id="@+id/season3"
                    android:title="@string/menu_filter_season3" />
                <item
                    android:id="@+id/season4"
                    android:title="@string/menu_filter_season4" />
                <item
                    android:id="@+id/season5"
                    android:title="@string/menu_filter_season5" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:title="@string/menu_refresh"
        app:showAsAction="ifRoom|withText" />

</menu>